# zero-to-hero-ide

./: README.md
2_VSCode_Extension/: README.md
3_TreeSitter_Extractor/: README.md  tree-sitter.js  tree-sitter.wasm
3_TreeSitter_Extractor/parsers/: tree-sitter-html.wasm  tree-sitter-typescript.wasm
4_LSP_Server/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
4_LSP_Server/client/: package.json
4_LSP_Server/client/src/: extension.ts
4_LSP_Server/src/: main.rs
