[package]
name = "angular-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.17"
ropey = "1.6.0"
tokio = { version = "1.25.0", features = [ "full" ] }
tower-lsp = "0.18.0"
tree-sitter = "0.20.9"
tree-sitter-html = "0.19.0"
tree-sitter-typescript = "0.20.2"
